Ajout page Error + correction lien du ffoter vers ancre du header + correction orientation des flèches du Collapse pour correspondre à la maquette (inversion) + ajout de "end" pour le Link a-propos qui n'orientait pas vers la page d'erreur si URL incorrecte.

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,7 +9,7 @@
     background-color: $main-color;
     color: $main-bg-color;
     
-    &-logo img {
+    &-logo {
         margin-top: 66px;
     }
 
